# admin-dashboard

./: .gitignore  README.md  TODO.md  deploy-remote.sh  deploy.sh  dprint.json  hierarchy.html  known_hosts  package.json  pnpm-lock.yaml  split_into_two_servers.md  ss.sh
_mongodb_doc/: docker-compose.yml  package.json  pnpm-lock.yaml
classes/: client_src_libs_result.default.html  client_src_services_baseApiService.BaseApiService.html  client_src_services_couponsApi.CouponApiService.html  client_src_services_pickupAddressApi.PickupAddressApiService.html  client_src_services_productsApi.ProductApiService.html  client_src_services_regionsApi.RegionApiService.html  client_src_services_shopownersApi.ShopownerApiService.html  client_src_services_townshipsApi.TownshipApiService.html  client_src_services_userAddressApi.UserAddressApiService.html  client_src_services_usersApi.UserApiService.html  server__types_env.NodeJS.Immediate.html  server__types_env.NodeJS.Timeout.html  server_src_services_accessLog.AccessLogService.html  server_src_services_brand.BrandService.html  server_src_services_productService.ProductService.html  server_src_services_user.UserService.html  server_src_utils_auth_life_cycle_state.LifeCycleState.html
client/: .env.example  .example.env  .gitignore  TODO.md  index.html  key  (+4 more)
scripts/data-entry/core/: Cargo.toml
scripts/data-entry/core/src/: excel.rs  instock_status.rs  lib.rs  price_unit.rs  product.rs  product_builder.rs  product_status.rs  utils.rs
scripts/data-entry/web/: Cargo.toml  Rocket.toml
scripts/data-entry/web/src/: main.rs
(+3177 files in other folders)
